testdata/negative/zb_neg_cr_whitespace.ksy
meta:
  id: zb_neg_cr_whitespace
seq:
  - id: a
    type: u1
  - id: b
    type: u1
instances:
  with_cr:
    value: "a\rand\rb"
